--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-学习的视频上说，必须有个叫做index.html的文件
+<!doctype html>
+<html>
+<head>
+   <title>个人站点</title>
+</head>
+<body>
+  <h1>标题</h1>
+  <p>学习的视频上说，必须有个叫做index.html的文件</p>
+</body>
+</html>
+
